<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:text="@string/are_you_sure_dialog"
            android:textStyle="bold" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginVertical="@dimen/normal_margin"
            android:src="@drawable/img_general_dialog" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_describe"
            style="@style/TextAppearance.Material3.BodyMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:gravity="center_horizontal"
            android:text="@string/this_action_cannot_be_undone_dialog" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
                android:layout_marginEnd="@dimen/smaller_margin"
                android:text="@string/cancel_dialog" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_confirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/smaller_margin"
                android:layout_toEndOf="@id/btn_cancel"
                android:text="@string/ok_dialog" />

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>